csComp/includes/css/csStyles.scss
/* ... */
.featureTooltip td:first-child {
    width: 16px;
}
.featureTooltip td:nth-child(2) {
    white-space: nowrap;
    -moz-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 1px;
    width: 100%;
}
.featureTooltip td:nth-child(3) {
    white-space: nowrap;
    width: 0;
    text-align: right;
    font-weight: bold;
}
.style-icon {
    border-radius: 25%;
    border: red;
    width: 20px;
    height: 20px;
    padding-top: 2px;
    padding-left: 4px;
}
.panel-group {
    margin: 10px;
}
.property-edit {
    clear: both;
}
.not-valid-input {
    color: red;
}
.icons-on-hover {
   float: left;
   position: relative;
   display: none;
   top: -10px;
}
.property-action {
    cursor: pointer;
    position: relative;
    display: inline-block;
}
.icons-on-hover:hover {
    display: block;
}
.feature-prop-item {
    border-radius: 3px;
    min-height: 36px;
    margin-left:-10px;
    border: none;
}

.feature-prop-content {
    position:relative;
}

.feature-prop-config {
    margin-left: 0;
    margin-top: 0;
}
.feature-prop-value {
    font-weight: 800;
}
.feature-prop-property {
    margin-left: 0;
    background: transparent;
}
.feature-prop-stats {
    font-size: 12px;
    opacity: 0.8;
}
.feature-prop-value-align-right {
    margin-top: -2em;
    float: right;
}
.item-stat {
    white-space: nowrap;
}
// .item-stat-title {

// }
.item-stat-value {
    font-weight: 700;
    margin-right: 10px;
}
.feature-prop-title {
    overflow: hidden;
    padding-left: 4px;
    padding-right: 20px;
    position: relative;
    left:0;
    top:-8px;
    font-size: 12px;
    pointer-events: none;
}
.feature-prop-property:hover {
    margin-left: 0;
    background-color: rgb(228, 228, 228);
}
.panel-heading:hover .icons-on-hover {
    display: block;

}
.clickable-feature-prop {
    cursor: pointer;
    color:darkblue;
}
// #featureprops-content:before {
//     display: block;
//     content: "";
//     height: 50px;
//     margin: -50px 0 0;
// }
#featureprops-content:hover leftpanel-header-button-container {
    opacity: 0.5;
}
.enable-newlines {
    white-space: pre-wrap;
}

/* button widget */
.button-widget
{
    background: red;
    cursor: pointer;
}

.button-layer-editor
{
   margin:20px;
}

.button-widget-image
{
    float:left;
    height:25px;
    margin-top:5px;
    margin-right:5px;
}

.button-widget-description
{
    font-size:13px;
    clear:left;
    color: #444;
    margin-top:-2px;
}

.button-title
{
    font-size: 20px;
}

.button-legend-label
{
    float:left;
    font-size:10px;
    margin-right:4px;
}

.button-legend-entries {
    float: left;
    margin-right: 4px;
    margin-top: 3px;
}

.button-legend-color-entry {
    width: 20px;
    height: 8px;
}

.button-container {
    background: rgba(255, 255, 255, 0.77);
    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.4);
    cursor : pointer;
    font-size: 20px;
    margin-top:5px;
    margin-right: 8px;
    color:black;
        min-height: 46px;

    }

.button-container:active {
    background: rgba(100, 100, 100, 0.77);
    color: white;
}

.button-container-down {
    background: #aaa;
    color: white;
}

.button-edit-button
{
    cursor:pointer;
    position: absolute;
    color:white;
    padding-top:5px;
        padding-left:5px;
    text-decoration: none;
    right: 0;
    top: 0;

    width: 50px;
    background: rgba(100, 100, 100, 0.77);
}

.button-edit-button > span {
    margin:10px
}

.layer-list-title :hover
{
    font-weight:700 !important;
}

  /**
 * Base style
 */

    .s3d {
        padding-left: 10px;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
        -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .3);
        -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, .3);
        height: 100%;
        margin: 0 0 10px;
        position: relative;
        text-decoration: none;

        width: 100%;
    }




/* leftpanel */

.leftpanel-scroll
{
 overflow-y: scroll !important;
 position: absolute;
 overflow-y: scroll !important;
 overflow-x: hidden;
 top: 40px;
 bottom: 0;
 left: 0;
 right: 0;
}

.leftpanel-entrance {
    -webkit-animation: fadeInLeft 0.1s;
}
.leftpanel-entrance.ng-hide {
    opacity: 0;
}
.leftpanel-exit {
    -webkit-animation: fadeOutLeft 0.0s;
}
.leftpanel-header-button {
    float: right;
    border: 0;
    background: transparent;
}
.leftpanel-header-button-container {
    float: right;
    margin-right: 10px;
}
.leftpanel-header-button-container-left {
    float: left;
    margin-left: -5px;
    margin-right: 5px;
}

/* dashboard */
.dashboard-directive {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 350px;
}
.leftpanel-collapsed .dashboard-directive {
    width: 100%;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    left: 10px;
}
.dashboard-name {
    font-size: 18px;
    cursor : pointer;
}
.dashboard-item {
    margin-right: 5px;
    padding: 3px;
    cursor: pointer;
}

.dashboard-header-link
{
  cursor:pointer;
}

.dashboard-selected {
    background: black;
    color: white;
    border-radius: 3px;
}
.dashboard-edit-checkbox {
    font-size: 18px;
}
.control-label {
    font-size: 16px;
    width: 120px;
    margin-left: 5px;
}
.control-label-marvel {
    font-size: 16px;
    width: 200px;
    margin-left: 2px;
}
.marvel-input {
    width: 90px;
}
.widgets-edit-list {
    list-style-type: none;
    padding: 0;
}
.widget-edit-item {
    font-size: 18px;
}
.gridster-content {
    pointer-events: all;
}
.widget-edit {
    float: right;
    position: absolute;
    top: 10px;
    display: none;
    right: 10px;
    opacity: 0.75;
    cursor: pointer;
}
.widget-button {
    margin-right: 5px;
}
.widget-title {
    font-size: 18px;
    position: absolute;
    font-weight: bold;
    margin: 4px;
}
/* ... */

